# carapace.rs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: audit.yml  main.yml  rust.yml
src/: command.rs  config.rs  context.rs  editor.rs  env.rs  lib.rs  main.rs  path_commands.rs  prompt.rs  util.rs
src/command/: cd_command.rs  dirs_command.rs  exit_command.rs  export_command.rs  general_command.rs  hash_command.rs  history_command.rs  mod.rs  popd_command.rs  pushd_command.rs  quit_command.rs  rehash_command.rs  set_command.rs  unset_command.rs
