[package]
name = "carapace"
version = "0.2.0"
authors = ["Morten Kristensen <me@mortens.dev>"]
edition = "2018"

[dependencies]
dirs-next = "2.0.0"
termcolor = "1.1.0"
rustyline = "6.3.0"
json = "0.12.4"
regex = "1.3.9"
lazy_static = "1.4.0"
clap = "2.33.3"
glob = "0.3.0"
libc = "0.2.77"
is_executable = "0.1.2"
shlex = "0.1.1"
