[package]
name = "carapace"
version = "0.2.0"
authors = ["Morten Kristensen <me@mortens.dev>"]
edition = "2021"

[dependencies]
dirs-next = "2.0.0"
termcolor = "1.1.3"
rustyline = "9.1.2"
json = "0.12.4"
regex = "1.6.0"
lazy_static = "1.4.0"
clap = "2.33.3"
glob = "0.3.0"
libc = "0.2.126"
is_executable = "1.0.1"
shlex = "1.3.0"
